include/pan_cdefs.h

#define PAN_INVALID_HANDLE 0
#define PAN_ERR_OK 0
#define PAN_ERR_FAILED 1
#define PAN_ERR_DEADLINE 2
#define PAN_ERR_NO_PATH 3
#define PAN_ERR_ADDR_SYNTAX 4
typedef uint32_t PanError;
typedef uintptr_t PanUDPAddr;
typedef uintptr_t PanConn;
typedef uintptr_t PanListenConn;
typedef uintptr_t PanPath;
typedef uintptr_t PanPolicy;
typedef uintptr_t PanSelector;
/////////////////
// Async Read/Write
////////////////
typedef void (*OnCompletionWaker)( PanError );