rust/src/bindings.rs

extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).ReadFrom`\n\\param[in] conn Listening connection.\n\\param[in] buffer Pointer to a buffer that will receive the packet.\n\\param[in] len Size of \\p buffer in bytes.\n\\param[out] from Host from which data was received. Can be NULL to ignore.\n\\param[out] n Number of bytes read. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup listen_conn"]
    pub fn PanListenConnReadFromAsync(
        conn: PanListenConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
        timeout_duration: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanListenConnReadFromAsyncVia(
        conn: PanListenConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        path: *mut PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout_duration: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).ReadFromVia`\n\\param[in] conn Listening connection.\n\\param[in] buffer Pointer to a buffer that will receive the packet.\n\\param[in] len Size of \\p buffer in bytes.\n\\param[out] from Host from which data was received. Can be NULL to ignore.\n\\param[out] path Path of the received packet. Can be NULL to ignore.\n\\param[out] n Number of bytes read. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup listen_conn"]
    pub fn PanListenConnReadFromVia(
        conn: PanListenConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        from: *mut PanUDPAddr,
        path: *mut PanPath,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\briefWrapper for `(pan.ListenConn).WriteTo`\n\\param[in] conn Listening connection.\n\\param[in] buffer Pointer to a buffer containing the message.\n\\param[in] len Length of the message in \\p buffer in bytes.\n\\param[in] to Destination address.\n\\param[out] n Number of bytes written. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_NO_PATH` if no path to the destination is known.\n`PAN_ERR_FAILED` if the operation failed in some other way.\n\\ingroup listen_conn"]
    pub fn PanListenConnWriteTo(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    pub fn PanListenConnWriteToAsync(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn PanListenConnWriteToViaAsync(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        path: PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).WriteToVia`\n\\param[in] conn Listening connection.\n\\param[in] buffer Pointer to a buffer containing the message.\n\\param[in] len Length of the message in \\p buffer in bytes.\n\\param[in] to Destination address.\n\\param[in] path Path to take to the destination.\n\\param[out] n Number of bytes written. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup listen_conn"]
    pub fn PanListenConnWriteToVia(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        to: PanUDPAddr,
        path: PanPath,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).LocalAddr`\n\\ingroup listen_conn"]
    pub fn PanListenConnLocalAddr(conn: PanListenConn) -> PanUDPAddr;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanListenConnSetDeadline(conn: PanListenConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetReadDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanListenConnSetReadDeadline(conn: PanListenConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.ListenConn).SetWriteDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup listen_conn"]
    pub fn PanListenConnSetWriteDeadline(conn: PanListenConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close a listening socket. The handle must still be deleted with\nPanDeleteHandle().\n\\ingroup listen_conn"]
    pub fn PanListenConnClose(conn: PanListenConn) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `pan.DialUDP`\n\\param[in] local is the local IP and port as string. Can be NULL to automatically\nchoose.\n\\param[in] remote is the SCION address of the remote host.\n\\param[in] policy Path policy. May be a PAN_INVALID_HANDLE to use the default\npolicy.\n\\param[in] selector Path selector. May be a PAN_INVALID_HANDLE to use the\ndefault selector.\n\\param[out] conn The value pointed to by \\p conn receives the connection handle\nif the call is successful.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_ADDR_SYNTAX` is the local address has an invalid format.\n`PAN_ERR_FAILED` if dialing failed.\n\\ingroup conn"]
    pub fn PanDialUDP(
        local: *const ::std::os::raw::c_char,
        remote: PanUDPAddr,
        policy: PanPolicy,
        selector: PanSelector,
        conn: *mut PanConn,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).Read`\n\\param[in] conn Connection\n\\param[in] buffer Pointer to a buffer that will receive the packet.\n\\param[in] len Size of \\p buffer in bytes.\n\\param[out] n Number of bytes read. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup conn"]
    pub fn PanConnRead(
        conn: PanConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).ReadVia`\n\\param[in] conn Connection\n\\param[in] buffer Pointer to a buffer that will receive the packet.\n\\param[in] len Size of \\p buffer in bytes.\n\\param[out] path Path of the received packet. Can be NULL to ignore.\n\\param[out] n Number of bytes read. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup conn"]
    pub fn PanConnReadVia(
        conn: PanConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        path: *mut PanPath,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    pub fn PanConnReadViaAsync(
        conn: PanConn,
        buffer: *mut ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        path: *mut PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).Write`\n\\param[in] conn Connection\n\\param[in] buffer Pointer to a buffer containing the message.\n\\param[in] len Length of the message in \\p buffer in bytes.\n\\param[out] n Number of bytes written. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_NO_PATH` if no path to the destination is known.\n`PAN_ERR_FAILED` if the operation failed in some other way.\n\\ingroup conn"]
    pub fn PanConnWrite(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    pub fn PanConnWriteAsync(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    pub fn GetLocalIA(do_panic: GoUint8) -> GoUint64;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).WriteVia`\n\\param[in] conn Connection\n\\param[in] buffer Pointer to a buffer containing the message.\n\\param[in] len Length of the message in \\p buffer in bytes.\n\\param[in] path Path to take to the destination.\n\\param[out] n Number of bytes written. Can be NULL to ignore.\n\\return `PAN_ERR_OK` on success.\n`PAN_ERR_DEADLINE` if the deadline was exceeded.\n`PAN_ERR_FAILED` if the operation failed.\n\\ingroup conn"]
    pub fn PanConnWriteVia(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        path: PanPath,
        n: *mut ::std::os::raw::c_int,
    ) -> PanError;
}
extern "C" {
    pub fn PanConnWriteViaAsync(
        conn: PanListenConn,
        buffer: *const ::std::os::raw::c_void,
        len: ::std::os::raw::c_int,
        path: PanPath,
        n: *mut ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
        waker: OnCompletionWaker,
        arc_conn: *mut ::std::os::raw::c_void,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for (pan.Conn).LocalAddr\n\\ingroup conn"]
    pub fn PanConnLocalAddr(conn: PanConn) -> PanUDPAddr;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).RemoteAddr`\n\\ingroup conn"]
    pub fn PanConnRemoteAddr(conn: PanConn) -> PanUDPAddr;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).SetDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup conn"]
    pub fn PanConnSetDeadline(conn: PanConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).SetReadDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup conn"]
    pub fn PanConnSetReadDeadline(conn: PanConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Wrapper for `(pan.Conn).SetWriteDeadline`\n\\param[in] conn Connection to set the deadline on.\n\\param[in] t is the number milliseconds the deadline is set in the future.\n\\ingroup conn"]
    pub fn PanConnSetWriteDeadline(conn: PanConn, t: u32) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close a connection. The handle must still be deleted with\nPanDeleteHandle().\n\\ingroup conn"]
    pub fn PanConnClose(conn: PanConn) -> PanError;
}
